feat: add comp ToogleLanguage, ToogleTheme, styles; T: 27-01-2025 01:13

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,5 +4,5 @@
   "skills": "Skills",
   "contact": "Contact",
   "greeting": "Hi, I am",
-  "fullName": "Amelichev Evgeniy"
+  "fullName": "Amelichev Evgeniy."
 }
