--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -4,5 +4,5 @@
   "skills": "Навыки",
   "contact": "Контакты",
   "greeting": "Привет, меня зовут",
-  "fullName": "Амеличев Евгений"
+  "fullName": "Амеличев Евгений."
 }
