feat: add comp Project; refac: styles T: 28-01-2025 21:35

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -3,6 +3,6 @@
   "projects": "Проекты",
   "skills": "Навыки",
   "contact": "Контакты",
-  "greeting": "Привет, меня зовут",
+  "greeting": "Привет, я",
   "fullName": "Амеличев Евгений."
 }
