--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -4,5 +4,15 @@
   "skills": "Навыки",
   "contact": "Контакты",
   "greeting": "Привет, я",
-  "fullName": "Амеличев Евгений."
+  "fullName": "Амеличев Евгений.",
+  "profession": "Junior разработчик веб-интерфейсов.",
+  "aboutMe": "Я увлечённый и внимательный к деталям Frontend-разработчик, ищу позицию Junior Frontend Developer в вашей компании. Хочу применить свои навыки в разработке, решении сложных задач и помощи в своевременном завершении проектов. Готов учиться, развиваться и вносить вклад в команду!",
+  "rezume": "резюме",
+  "name": "Имя",
+  "email": "Email",
+  "message": "Сообщение",
+  "submit": "отправить",
+  "eyn": "Введите Ваше Имя",
+  "eye": "Введите Ваш Email",
+  "eym": "Введите Ваше Сообщение"
 }
