feat: add icon; fix: translate, styles; T: 08-02-2025 13:03

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,7 @@
   "greeting": "Hi, I am",
   "fullName": "Amelichev Evgeniy",
   "profession": "Junior Frontend Developer.",
-  "aboutMe": "I am an enthusiastic and detail-oriented Frontend Developer seeking a Junior Frontend Developer position in your company. I want to apply my skills in development, solving complex problems, and assisting in the timely completion of projects. I am eager to learn, grow, and contribute to the team!",
+  "aboutMe": "I am a passionate and detail-oriented Frontend developer, actively looking for a job and ready to join the team to create high-quality and modern web applications. I want to apply my skills in developing and solving complex tasks. I am open to new challenges, strive for professional growth and am ready to contribute to the development of the product!",
   "rezume": "resume",
   "name": "Name",
   "email": "Email",
