--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -6,7 +6,7 @@
   "greeting": "Привет, я",
   "fullName": "Амеличев Евгений.",
   "profession": "Junior разработчик веб-интерфейсов.",
-  "aboutMe": "Я увлечённый и внимательный к деталям Frontend-разработчик, ищу позицию Junior Frontend Developer в вашей компании. Хочу применить свои навыки в разработке, решении сложных задач и помощи в своевременном завершении проектов. Готов учиться, развиваться и вносить вклад в команду!",
+  "aboutMe": "Я увлечённый и внимательный к деталям Frontend-разработчик, активно ищу работу и готов присоединиться к команде для создания качественных и современных веб-приложений. Хочу применить свои навыки в разработке и решении сложных задач. Открыт к новым вызовам, стремлюсь к профессиональному росту и готов внести свой вклад в развитие продукта!",
   "rezume": "резюме",
   "name": "Имя",
   "email": "Email",
