fix: underline h2, hover on mobile; refac: styles; T: 09-02-2025 23:51

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,7 +12,7 @@
   "email": "Email",
   "message": "Message",
   "submit": "submit",
-  "eyn": "Enter Your Name",
-  "eye": "Enter Your Email",
-  "eym": "Enter Your Message"
+  "eyn": "Enter your name",
+  "eye": "Enter your email",
+  "eym": "Enter your message"
 }
