--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -12,7 +12,7 @@
   "email": "Email",
   "message": "Сообщение",
   "submit": "отправить",
-  "eyn": "Введите Ваше Имя",
-  "eye": "Введите Ваш Email",
-  "eym": "Введите Ваше Сообщение"
+  "eyn": "Введите ваше имя",
+  "eye": "Введите ваш email",
+  "eym": "Введите ваше сообщение"
 }
