refac: changed backround, styles; fix: switching lang; T: 12-02-2025 18:33

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,8 +5,8 @@
   "contact": "Contact",
   "greeting": "Hi, I am",
   "fullName": "Amelichev Evgeniy",
-  "profession": "Junior Frontend Developer.",
-  "aboutMe": "I am a passionate and detail-oriented Frontend developer, actively looking for a job and ready to join the team to create high-quality and modern web applications. I want to apply my skills in developing and solving complex tasks. I am open to new challenges, strive for professional growth and am ready to contribute to the development of the product!",
+  "profession": "Junior frontend-developer.",
+  "aboutMe": "I am a passionate and detail-oriented frontend-developer, actively looking for a job and ready to join the team to create high-quality and modern web applications. I want to apply my skills in developing and solving complex tasks. I am open to new challenges, strive for professional growth and am ready to contribute to the development of the product!",
   "rezume": "resume",
   "name": "Name",
   "email": "Email",
