--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -5,8 +5,8 @@
   "contact": "Контакты",
   "greeting": "Привет, я",
   "fullName": "Амеличев Евгений.",
-  "profession": "Junior разработчик веб-интерфейсов.",
-  "aboutMe": "Я увлечённый и внимательный к деталям Frontend-разработчик, активно ищу работу и готов присоединиться к команде для создания качественных и современных веб-приложений. Хочу применить свои навыки в разработке и решении сложных задач. Открыт к новым вызовам, стремлюсь к профессиональному росту и готов внести свой вклад в развитие продукта!",
+  "profession": "Junior frontend-разработчик.",
+  "aboutMe": "Я увлечённый и внимательный к деталям frontend-разработчик, активно ищу работу и готов присоединиться к команде для создания качественных и современных веб-приложений. Хочу применить свои навыки в разработке и решении сложных задач. Открыт к новым вызовам, стремлюсь к профессиональному росту и готов внести свой вклад в развитие продукта!",
   "rezume": "резюме",
   "name": "Имя",
   "email": "Email",
