--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -14,5 +14,6 @@
   "submit": "отправить",
   "eyn": "Введите ваше имя",
   "eye": "Введите ваш email",
-  "eym": "Введите ваше сообщение"
+  "eym": "Введите ваше сообщение",
+  "err-message": "Ошибка при отправке формы" 
 }
