--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,16 +2,18 @@
   "language": "ru",
   "projects": "Projects",
   "skills": "Skills",
-  "contact": "Contact",
+  "contacts": "Contacts",
   "greeting": "Hi, I am",
-  "fullName": "Amelichev Evgeniy.",
+  "fullName": "Amelichev Evgeniy",
   "profession": "Full Stack Junior web-developer.",
   "aboutMe": "I am a passionate and detail-oriented web-developer, actively looking for a job and ready to join the team to create high-quality and modern web-applications. I want to apply my skills in developing and solving complex tasks. I am open to new challenges, strive for professional growth and am ready to contribute to the development of the product!",
   "rezume": "resume",
+  "subjectMessage": "Subject message",
   "name": "Name",
   "email": "Email",
   "message": "Message",
   "submit": "submit",
+  "esm": "Enter subject message",
   "eyn": "Enter your name",
   "eye": "Enter your email",
   "eym": "Enter your message",
