--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -2,16 +2,18 @@
   "language": "en",
   "projects": "Проекты",
   "skills": "Навыки",
-  "contact": "Контакты",
+  "contacts": "Контакты",
   "greeting": "Привет, я",
-  "fullName": "Амеличев Евгений.",
+  "fullName": "Амеличев Евгений",
   "profession": "Full Stack Junior веб-разработчик.",
   "aboutMe": "Я увлечённый и внимательный к деталям веб-разработчик, активно ищу работу и готов присоединиться к команде для создания качественных и современных веб-приложений. Хочу применить свои навыки в разработке и решении сложных задач. Открыт к новым вызовам, стремлюсь к профессиональному росту и готов внести свой вклад в развитие продукта!",
   "rezume": "резюме",
+  "subjectMessage": "Тема сообщения",
   "name": "Имя",
   "email": "Email",
   "message": "Сообщение",
   "submit": "отправить",
+  "esm": "Введите тему сообщения",
   "eyn": "Введите ваше имя",
   "eye": "Введите ваш email",
   "eym": "Введите ваше сообщение",
