feat: add files for docker, nginx conf for docker; T: 21-08-2025 22:39

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,7 @@
   "contacts": "Contacts",
   "greeting": "Hi, I am",
   "fullName": "Amelichev Evgeniy",
-  "profession": "Full Stack Junior web-developer.",
+  "profession": "Full Stack web-developer.",
   "aboutMe": "I am a passionate and detail-oriented web-developer, actively looking for a job and ready to join the team to create high-quality and modern web-applications. I want to apply my skills in developing and solving complex tasks. I am open to new challenges, strive for professional growth and am ready to contribute to the development of the product!",
   "rezume": "resume",
   "subjectMessage": "Subject message",
