--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -5,8 +5,8 @@
   "contacts": "Контакты",
   "greeting": "Привет, я",
   "fullName": "Амеличев Евгений",
-  "profession": "Full Stack веб-разработчик.",
-  "aboutMe": "Я увлечённый и внимательный к деталям веб-разработчик, активно ищу работу и готов присоединиться к команде для создания качественных и современных веб-приложений. Хочу применить свои навыки в разработке и решении сложных задач. Открыт к новым вызовам, стремлюсь к профессиональному росту и готов внести свой вклад в развитие продукта!",
+  "profession": "Fullstack веб-разработчик",
+  "aboutMe": "Я увлечённый и внимательный к деталям веб-разработчик, готов присоединиться к команде для создания качественных и современных веб-приложений. Хочу применить свои навыки в разработке и решении сложных задач. Открыт к новым вызовам, стремлюсь к профессиональному росту и готов внести свой вклад в развитие продукта!",
   "rezume": "резюме",
   "subjectMessage": "Тема сообщения",
   "name": "Имя",
