refac: add resume in main menu; fix: click on icon; T: 26-09-2025 13:54

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,7 @@
   "fullName": "Amelichev Evgeniy",
   "profession": "Fullstack web-developer",
   "aboutMe": "I am a passionate and detail-oriented web-developer, ready to join the team to create high-quality and modern web-applications. I want to apply my skills in developing and solving complex tasks. I am open to new challenges, strive for professional growth and am ready to contribute to the development of the product!",
-  "rezume": "resume",
+  "resume": "resume",
   "subjectMessage": "Subject message",
   "name": "Name",
   "email": "Email",
