--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -7,7 +7,7 @@
   "fullName": "Амеличев Евгений",
   "profession": "Fullstack веб-разработчик",
   "aboutMe": "Я увлечённый и внимательный к деталям веб-разработчик, готов присоединиться к команде для создания качественных и современных веб-приложений. Хочу применить свои навыки в разработке и решении сложных задач. Открыт к новым вызовам, стремлюсь к профессиональному росту и готов внести свой вклад в развитие продукта!",
-  "rezume": "резюме",
+  "resume": "резюме",
   "subjectMessage": "Тема сообщения",
   "name": "Имя",
   "email": "Email",
